--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vanilo/slideshow",
+    "name": "ogawa/slideshow",
     "description": "Vanilo Slideshow Module",
     "type": "library",
     "license": "MIT",
