--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "authors": [
         {
             "name": "Kunihiko Ogawa",
-            "homepage": "https://"
+            "homepage": "https://www.yahoo.jp"
         }
     ],
     "require": {
